fix: fix letter spacing

--- a/src/app/entry/[slug]/entry.scss
+++ b/src/app/entry/[slug]/entry.scss
@@ -35,6 +35,7 @@
         border: 1px solid #454c57;
 
         > .markdown {
+          letter-spacing: 0.05em;
           h1, h2 {
             margin: 24px 0 12px;
           }
